[package]
name = "enumflags"
version = "0.4.1"
authors = ["maik klein <maikklein@googlemail.com>"]
description = "Bitflags"
license = "MIT"
repository = "https://github.com/MaikKlein/enumflags"
readme = "../README.md"
keywords = ["enum", "bitflag", "flag", "bitflags"]
documentation = "https://docs.rs/enumflags"

[features]
default = []
nostd = []

[dependencies]
serde = { version = "1.0", features = [ "derive" ], optional = true }
